--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,13 @@
 			<version>4.5</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-oauth2-client -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-client</artifactId>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
